--- a/index.html
+++ b/index.html
@@ -94,12 +94,18 @@
         <div class="banner_list swiper-wrapper">
           <div class="banner_img swiper-slide">
             <img src="img/banner.png" alt="배너">
+            <p class="slide_font">꿈이 실현으로</p>
+            <p class="slide_font_point">춘천 인공태양에너지</p>
           </div>
           <div class="banner_img swiper-slide">
             <img src="img/banner.png" alt="배너">
+            <p class="slide_font">꿈이 실현으로</p>
+            <p class="slide_font_point">춘천 인공태양에너지</p>
           </div>
           <div class="banner_img swiper-slide">
             <img src="img/banner.png" alt="배너">
+            <p class="slide_font">꿈이 실현으로</p>
+            <p class="slide_font_point">춘천 인공태양에너지</p>
           </div>          
         </div>
         <div class="swiper-pagination"></div>
@@ -374,6 +380,10 @@ var swiper = new Swiper('.swiper-container', {
   loop: true,
   // Enable debugger
   debugger: true,
+  autoplay: {
+         delay: 5000,
+         disableOnInteraction: false,
+       },
 });
     </script>
   </body>
